[B][COLOR red]Update - v3.3.8 - Dec. 23, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Switched from Trakt slug check for ID's to Trakt IDLookup
    method. Slug checks seems to report same IMDB_ID
    but different TVDB_ID for some shows. IDLookup method
    is less prone to errors.[/I]
[COLOR yellow]--[/COLOR][I] Added TMDb Watchlist, Favorites, and Userlist to library
    import options for both Movies and TV Shows.[/I]
[COLOR yellow]--[/COLOR][I] Happy Holidays to Everyone![/I

[B][COLOR red]Update - v3.3.7 - Dec. 19, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added extra folder path check when comparing Venom
    library folders to Kodi's MyVideos*.db file.  Now 
    "special://userdata" and translated paths are both
    checked.  This solves issues with moved or manually
    added folders.[/I]
[COLOR yellow]--[/COLOR][I] Added new sort function as a temporary workaround to
    solve the out of order Season Specials and Episode
    index problems from TVDb v1 api.  TVDb is aware
    of the condition.  Sadly this still does not fix the issues
    with Trakt-Progress being incorrect at times for next
    episode to watch, that problem occurs because the
    index is very often out of order so the wrong NextUp
    episode is grabbed.fried.[/I]
[COLOR yellow]--[/COLOR][I] If you do not use Venom's Library integration please
    disable the "Auto Update Service" under Settings-Library.
    The new library folder check and auto setup prompt now
    runs inside the existing service so it will cause the pop
    up notification for setup.[/I]

[B][COLOR red]Update - v3.3.6 - Dec. 18, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new function to move traceback error logging to
    addon log vs. kodi log.[/I]
[COLOR yellow]--[/COLOR][I] Added .setCast() to player.[/I]
[COLOR yellow]--[/COLOR][I] Added automated setup to add "Venom Library folders"
    to Kodi Sources under "Settings-Library".  A notice will
    also pop up requesting this automated setup if folders