@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.3.8" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.3.9" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -36,14 +36,10 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.3.8 - Dec. 23, 2019[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Switched from Trakt slug check for ID's to Trakt IDLookup
-    method. Slug checks seems to report same IMDB_ID
-    but different TVDB_ID for some shows. IDLookup method
-    is less prone to errors.[/I]
-[COLOR yellow]--[/COLOR][I] Added TMDb Watchlist, Favorites, and Userlist to library
-    import options for both Movies and TV Shows.[/I]
-[COLOR yellow]--[/COLOR][I] Happy Holidays to Everyone![/I
+[B][COLOR red]Update - v3.3.9 - Dec. 23, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed broken for loop from previous update preventing
+    Library Updates from completing.[/I]
+[COLOR yellow]--[/COLOR][I] Added Disney+ and Showcase to TVShows Networks.[/I]
 		</news>
 	</extension>
 </addon>
